--- a/EasyUpdateApplicationLibrary/src/main/res/values/styles.xml
+++ b/EasyUpdateApplicationLibrary/src/main/res/values/styles.xml
@@ -5,4 +5,22 @@
 		<item name="colorAccent">@color/accent</item>
 	</style>
 	
+	<style name="ms_AlertDialog" parent="@style/Theme.AppCompat.Light"/>
+		
+	<style name="ms_AlertDialog.Title">
+		<item name="android:paddingRight">24dp</item>
+		<item name="android:paddingLeft">24dp</item>
+		<item name="android:paddingTop">24dp</item>
+		<item name="android:textSize">20sp</item>
+		<item name="android:textColor">?android:attr/textColorPrimary</item>
+		<item name="android:fontFamily">sans-serif-medium</item>
+	</style>
+
+	<style name="ms_AlertDialog.Content">
+		<item name="android:paddingRight">24dp</item>
+		<item name="android:paddingLeft">24dp</item>
+		<item name="android:paddingTop">20dp</item>
+		<item name="android:paddingBottom">24dp</item>
+	</style>
+	
 </resources>
